<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:id="@+id/rl"
    android:background="#e0e0e0">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rr">

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cards"
            android:id="@+id/linearLayout"
            android:paddingLeft="6dp"
            android:paddingTop="4dp"
            android:paddingRight="6dp"
            android:paddingBottom="4dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="4dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/AppIcon2"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose"
                android:id="@+id/button"
                android:enabled="true"
                android:layout_below="@+id/AppName2"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/Name"
                android:id="@+id/AppName2"
                android:layout_below="@+id/AppIcon2"
                android:layout_centerHorizontal="true" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/button"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:id="@+id/radio">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Date"
                    android:id="@+id/date"
                    android:layout_gravity="right"
                    android:checked="false" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Countdown"
                    android:id="@+id/timer"
                    android:layout_gravity="center_horizontal"
                    android:checked="true" />
            </RadioGroup>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/TimerLayout"
            android:background="@drawable/cards"
            android:layout_below="@+id/linearLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amount"
                android:id="@+id/textView"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <NumberPicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/numberPicker"
                android:orientation="horizontal"
                android:showDividers="middle|beginning|end"
                android:layout_alignTop="@+id/minsPicker"
                android:layout_alignRight="@+id/textView"
                android:layout_alignEnd="@+id/textView" />

            <NumberPicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/minsPicker"
                android:orientation="horizontal"
                android:showDividers="middle|beginning|end"
                android:layout_below="@+id/textView"
                android:layout_centerHorizontal="true" />

            <NumberPicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/hoursPicker"
                android:orientation="horizontal"
                android:showDividers="middle|beginning|end"
                android:layout_alignTop="@+id/numberPicker"
                android:layout_alignLeft="@+id/textView"
                android:layout_alignStart="@+id/textView" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hours"
                android:id="@+id/textView6"
                android:textSize="15sp"
                android:layout_alignTop="@+id/textView4"
                android:layout_alignLeft="@+id/hoursPicker"
                android:layout_alignStart="@+id/hoursPicker"
                android:layout_alignBottom="@+id/textView4"
                android:layout_alignRight="@+id/hoursPicker"
                android:layout_alignEnd="@+id/hoursPicker"
                android:gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dots"
                android:id="@+id/textView2"
                android:textSize="100sp"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/hoursPicker"
                android:layout_toEndOf="@+id/hoursPicker" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dots"
                android:id="@+id/textView3"
                android:textSize="100sp"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/numberPicker"
                android:layout_toStartOf="@+id/numberPicker" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mins"
                android:id="@+id/textView4"
                android:textSize="15sp"
                android:layout_alignRight="@+id/minsPicker"
                android:layout_alignEnd="@+id/minsPicker"
                android:layout_alignTop="@+id/textView5"
                android:layout_alignLeft="@+id/minsPicker"
                android:layout_alignStart="@+id/minsPicker"
                android:gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/secs"
                android:id="@+id/textView5"
                android:textSize="15sp"
                android:gravity="center"
                android:layout_alignRight="@+id/numberPicker"
                android:layout_alignEnd="@+id/numberPicker"
                android:layout_below="@+id/numberPicker" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="false"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/TimerLayout"
            android:background="@drawable/cards"
            android:id="@+id/DateLayout"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:visibility="gone">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sDate"
                android:id="@+id/setDate"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sTime"
                android:id="@+id/SetTime"
                android:layout_below="@+id/setDate"
                android:layout_alignLeft="@+id/setDate"
                android:layout_alignStart="@+id/setDate" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disclaimer"
            android:id="@+id/textView8"
            android:layout_below="@+id/DateLayout"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

</ScrollView>
